@@ -459,10 +459,4 @@
   
    <copyField source="*" dest="catchall_t"/>
 
- <!-- Similarity is the scoring routine for each document vs a query.
-      A custom similarity may be specified here, but the default is fine
-      for most applications.
- -->
- <!-- <similarity class="org.apache.lucene.search.similarities.DefaultSimilarity"/> -->
-
 </schema>
